# voice-qualification-bot

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  conversation_testing.py  health.py  twilio.py
app/config/: __init__.py  dependencies.py  settings.py
app/models/: __init__.py  audio.py  events.py  intent.py  scenario.py  session.py
app/prompts/: __init__.py  normalization.py
app/scenarios/: __init__.py  definitions.py  loader.py  registry.py
app/services/: __init__.py  conversation_service.py  conversation_store.py  event_bus.py  logger.py  openai_service.py  qualification_service.py  stt_service.py  tts_service.py  twilio_service.py
app/state_machine/: __init__.py  events.py  machine.py  policies.py  states.py  transitions.py
app/utils/: __init__.py  audio.py  timing.py
app/websocket/: __init__.py  dashboard.py  handler.py  media_stream.py  protocol.py
docker/: Dockerfile
docs/: ARCHITECTURE.md
frontend/: .env.production  .oxlintrc.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_conversation_testing_endpoints.py  test_dashboard_stream.py  test_di_wiring.py  test_websocket.py
tests/unit/: __init__.py  test_conversation_service.py  test_event_bus.py  test_events_model.py  test_flow_reuse.py  test_openai_normalizer.py  test_qualification_service.py  (+7 more)
(+29 files in other folders)
